--- a/book/css/style.css
+++ b/book/css/style.css
@@ -951,6 +951,11 @@
   }
 }
 @media screen {
+  .scene-hole {
+    position: relative !important;
+    overflow: unset !important;
+  }
+
   .scene .page_tunnels {
     --gradient-height: 10;
     background: linear-gradient(180deg, #000000 Calc(0% / var(--gradient-height)), rgba(0, 0, 0, 0.738) Calc(19% / var(--gradient-height)), rgba(0, 0, 0, 0.541) Calc(34% / var(--gradient-height)), rgba(0, 0, 0, 0.382) Calc(47% / var(--gradient-height)), rgba(0, 0, 0, 0.278) Calc(56.5% / var(--gradient-height)), rgba(0, 0, 0, 0.194) Calc(65% / var(--gradient-height)), rgba(0, 0, 0, 0.126) Calc(73% / var(--gradient-height)), rgba(0, 0, 0, 0.075) Calc(80.2% / var(--gradient-height)), rgba(0, 0, 0, 0.042) Calc(86.1% / var(--gradient-height)), rgba(0, 0, 0, 0.021) Calc(91% / var(--gradient-height)), rgba(0, 0, 0, 0.008) Calc(95.2% / var(--gradient-height)), rgba(0, 0, 0, 0.002) Calc(98.2% / var(--gradient-height)), rgba(0, 0, 0, 0) Calc(100% / var(--gradient-height))), url('../img/tunnels.svg?1379668445') no-repeat, url('../img/bg_tunnel-specks.png?1374696235') repeat, #6c373f;
@@ -964,8 +969,10 @@
   }
 
   #tunnel {
-    position: relative;
-    z-index: 0;
+    max-height: none;
+    aspect-ratio: auto;
+    height: 500vh;
+    overflow: unset;
     --gradient-height: 10;
     background: linear-gradient(0deg, #000000 Calc(0% / var(--gradient-height)), rgba(0, 0, 0, 0.738) Calc(19% / var(--gradient-height)), rgba(0, 0, 0, 0.541) Calc(34% / var(--gradient-height)), rgba(0, 0, 0, 0.382) Calc(47% / var(--gradient-height)), rgba(0, 0, 0, 0.278) Calc(56.5% / var(--gradient-height)), rgba(0, 0, 0, 0.194) Calc(65% / var(--gradient-height)), rgba(0, 0, 0, 0.126) Calc(73% / var(--gradient-height)), rgba(0, 0, 0, 0.075) Calc(80.2% / var(--gradient-height)), rgba(0, 0, 0, 0.042) Calc(86.1% / var(--gradient-height)), rgba(0, 0, 0, 0.021) Calc(91% / var(--gradient-height)), rgba(0, 0, 0, 0.008) Calc(95.2% / var(--gradient-height)), rgba(0, 0, 0, 0.002) Calc(98.2% / var(--gradient-height)), rgba(0, 0, 0, 0) Calc(100% / var(--gradient-height))), url('../img/bg-tunnel-border-left.svg?1378751783') 0 0 repeat-y, url('../img/bg-tunnel-border-right.svg?1378751720') 100% 0 repeat-y, url('../img/bg_tunnel-furniture.svg?1379267001') center 0 repeat-y, url('../img/bg_tunnel-specks.png?1374696235') repeat, #6c373f;
     background: linear-gradient(0deg, #000000 Calc(0% / var(--gradient-height)), rgba(0, 0, 0, 0.738) Calc(19% / var(--gradient-height)), rgba(0, 0, 0, 0.541) Calc(34% / var(--gradient-height)), rgba(0, 0, 0, 0.382) Calc(47% / var(--gradient-height)), rgba(0, 0, 0, 0.278) Calc(56.5% / var(--gradient-height)), rgba(0, 0, 0, 0.194) Calc(65% / var(--gradient-height)), rgba(0, 0, 0, 0.126) Calc(73% / var(--gradient-height)), rgba(0, 0, 0, 0.075) Calc(80.2% / var(--gradient-height)), rgba(0, 0, 0, 0.042) Calc(86.1% / var(--gradient-height)), rgba(0, 0, 0, 0.021) Calc(91% / var(--gradient-height)), rgba(0, 0, 0, 0.008) Calc(95.2% / var(--gradient-height)), rgba(0, 0, 0, 0.002) Calc(98.2% / var(--gradient-height)), rgba(0, 0, 0, 0) Calc(100% / var(--gradient-height))), url('../img/bg-tunnel-border-left.svg?1378751783') 0 0 repeat-y, url('../img/bg-tunnel-border-right.svg?1378751720') 100% 0 repeat-y, url('../img/bg_tunnel-furniture.svg?1379267001') center 0 repeat-y, url('../img/bg_tunnel-specks.png?1374696235') repeat, #6c373f;
@@ -976,90 +983,53 @@
     background-size: auto auto, 4.88281% auto, 4.88281% auto, 87.89063% auto, auto auto;
   }
 
-  .page_falling {
-    z-index: -1;
-  }
-
   .alice-falling {
-    background: url('../img/alice-fall-sce97bbc8d5.png') 0 0% no-repeat;
+    background: url('../img/alice-fall-s35cafeff29.png') 0 0% no-repeat;
     height: 998px;
     width: 640px;
-    left: 50%;
-    -moz-transform: translate(-50%, 0);
-    -ms-transform: translate(-50%, 0);
-    -webkit-transform: translate(-50%, 0);
-    transform: translate(-50%, 0);
-    position: absolute;
+    transform: translate(-50%, -30%);
+    position: sticky;
     top: 0;
-    z-index: 1;
+    left: 50%;
     aspect-ratio: 640 / 998;
     width: 38%;
     height: auto;
-  }
-  #tunnel .alice-falling {
     background-size: 100% auto;
     background-size: 100% auto;
     background-size: 100% auto;
     background-size: 100% auto;
   }
 
-  .frightened .alice-falling {
-    background: url('../img/alice-fall-sce97bbc8d5.png') 0 0 no-repeat;
-    -moz-animation: freak-out 1.5s steps(2) infinite;
-    -webkit-animation: freak-out 1.5s steps(2) infinite;
-    animation: freak-out 1.5s steps(2) infinite;
-    background-size: 100% auto;
-    background-size: 100% auto;
-    background-size: 100% auto;
-    background-size: 100% auto;
+  /*
+  @media (prefers-reduced-motion: no-preference) {
+      @supports (animation-timeline: scroll()) {
+          .alice-falling {
+              animation:
+                  fall linear both,
+                  emotions steps(4) both;
+              animation-timeline: scroll(), view(20% -100%);
+              animation-range: contain, contain;
+          }
+      }
   }
-
-  @-moz-keyframes freak-out {
-    0% {
-      background-position: 0 0%;
-    }
-    100% {
-      background-position: 0 50%;
-    }
+  
+  @keyframes fall {
+      from {
+          transform: translate(-50%, -200%);
+      }
+      to {
+          transform: translate(-50%, 100%);
+      }
   }
-  @-webkit-keyframes freak-out {
-    0% {
-      background-position: 0 0%;
-    }
-    100% {
-      background-position: 0 50%;
-    }
-  }
-  @keyframes freak-out {
-    0% {
-      background-position: 0 0%;
-    }
-    100% {
-      background-position: 0 50%;
-    }
-  }
-  .curious .alice-falling {
-    background: url('../img/alice-fall-sce97bbc8d5.png') 0 50% no-repeat;
-  }
-
-  .sleeping .alice-falling {
-    background: url('../img/alice-fall-sce97bbc8d5.png') 0 75% no-repeat;
-  }
-
-  .bored .alice-falling {
-    background: url('../img/alice-fall-sce97bbc8d5.png') 0 100% no-repeat;
-  }
-
-  .sticky-wrapper {
-    position: absolute;
-    width: 100%;
-  }
-
-  .stuck.alice-falling {
-    position: fixed;
-    top: 0;
-  }
-
+  
+  @keyframes emotions {
+      0% {
+          background-position: 0 25%;
+      }
+      100% {
+          background-position: 0 125%;
+      }
+  } */
   #scene-cut {
     background: #000;
     height: 100%;
