--- a/book/scss/hole.scss
+++ b/book/scss/hole.scss
@@ -23,6 +23,7 @@
 
     // Scenes
     @import "scenes/common";
+    @import "scenes/transitions";
     @import "scenes/cut";
     @import "scenes/hole/page-table";
     @import "scenes/wonderland/_wonderland";
